crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__no_description_snapshot@no_description_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type NoDesc struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
}

func (NoDesc) TableName() string { return "no_desc" }
