crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__non_identifier_names_in_constraints_snapshot@non_identifier_names_in_constraints_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Membership(models.Model):
    pk = models.CompositePrimaryKey("_1tenant_id", "_2user_id")
    _1tenant_id = models.IntegerField(db_column="1tenant_id")
    _2user_id = models.IntegerField(db_column="2user_id")
    user_email = models.TextField(db_column="user-email")
    _3created = models.TextField(db_column="3created")

    class Meta:
        db_table = "membership"
        indexes = [
            models.Index(fields=["_3created"]),
        ]
        constraints = [
            models.UniqueConstraint(fields=["user_email", "_1tenant_id"], name="uq_membership__1tenant_id_user-email"),
        ]
