crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__non_identifier_names_in_constraints_snapshot@non_identifier_names_in_constraints_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Membership {
  x1tenant_id Int @map("1tenant_id")
  x2user_id Int @map("2user_id")
  user_email String @map("user-email")
  x3created String @map("3created")

  @@id([x1tenant_id, x2user_id])
  @@unique([user_email, x1tenant_id])
  @@index([x3created])
  @@map("membership")
}
